reset button working

--- a/Etch-A-Sketch.html
+++ b/Etch-A-Sketch.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
+<head>
+    <title>Etch-A-Sketch</title>
+    <style>
+        body {
+            margin: 0px;
+        }
+        h1 {
+            font-size: 30px;
+            text-align: center;
+            margin-top: 1px;
+        }
+    </style>
+</head>
 
-    </head>
-    <body>
+<body>
+    <h1>Etch-A-Sketch</h1>
+    <div id='container'></div>
 
-        <div class="container">
+</body>
+<script src="script.js"></script>
 
-        </div>
-
-    </body>
-    <script src="script.js"></script>
 </html>
